# rust-test-game

./: .gitignore  Cargo.toml  readme.md
assets/: assets.csv
assets/shaders/: debug.vert.glsl  gui.vert.glsl  gui_component.frag.glsl  gui_text.frag.glsl  world.frag.glsl  world.vert.glsl  world_actors.frag.glsl  world_actors.vert.glsl  world_debug.frag.glsl  world_debug.vert.glsl  world_terrain.frag.glsl  world_terrain.vert.glsl
loomz/: Cargo.toml
loomz-client/: Cargo.toml
loomz-client/src/: animations.rs  gui.rs  lib.rs  state.rs  store.rs  terrain.rs
loomz-client/src/gui/: builder.rs  callbacks.rs  component.rs  components.rs  layout.rs  style.rs
loomz-client/src/gui/components/: frame.rs  label.rs
loomz-client/src/gui/layout/: compute.rs
loomz-client/src/state/: editor.rs  gameplay.rs  main_menu.rs  sandbox.rs  shared.rs
loomz-client/src/store/: reader.rs  writer.rs
loomz-engine/: Cargo.toml
loomz-engine-core/: Cargo.toml
loomz-engine-core/src/: alloc.rs  context.rs  descriptors.rs  helpers.rs  lib.rs  pipelines.rs  prepare.rs  setup.rs  staging.rs  submit.rs  texture.rs  upload.rs
loomz-engine-core/src/pipelines/: layout.rs  shaders.rs
loomz-engine-core/src/setup/: setup_ctx.rs  setup_resources.rs  setup_target.rs
loomz-engine/src/: context.rs  engine.rs  gui.rs  helpers.rs  lib.rs  pipeline_compiler.rs  prepare.rs  record.rs  submit.rs  world.rs
loomz-engine/src/engine/: record.rs
loomz-engine/src/gui/: batch.rs  setup.rs
loomz-engine/src/setup/: setup_resources.rs  setup_target.rs
loomz-engine/src/world/: batch.rs  data.rs  debug.rs  setup.rs  terrain.rs
loomz-shared/: Cargo.toml
loomz-shared/src/: api.rs  assets.rs  base_types.rs  error.rs  inputs.rs  lib.rs  store.rs
loomz-shared/src/api/: base.rs  gui.rs  world.rs
loomz-shared/src/api/gui/: builder.rs  component.rs  data.rs  gui_data.rs
loomz-shared/src/api/gui/data/: builder.rs  component.rs  layout.rs
loomz-shared/src/assets/: dynamic_bundle.rs  ktx.rs  msdf_font.rs  static_bundle.rs
loomz-shared/src/inputs/: keys_state.rs
loomz-shared/src/store/: reader.rs  writer.rs
loomz-tools/: Cargo.toml
loomz-tools/src/: generate_font.rs  generate_sprite.rs  main.rs  shaders.rs  shared.rs  textures.rs
loomz/src/: hot_reload.rs  main.rs  multithread.rs  multithreading.rs  singlethread.rs  windowing.rs
loomz/src/multithread/: sync_data.rs
tools/src/: main.rs
vk/: Cargo.toml
vk/src/: error.rs  ext.rs  khr.rs  lib.rs  vk110.rs  vk120.rs  wrapper.rs
vk/src/ext/: descriptor_indexing.rs  metal_surface.rs
vk/src/khr/: dynamic_rendering.rs  surface.rs  swapchain.rs  synchronization2.rs  wayland_surface.rs  win32_surface.rs
(+22 files in other folders)
