[package]
name = "loomz-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
#crate-type = ["dylib"]

[features]
default = []
hot-reload = []

[dependencies]
unicode-segmentation = "1.12"
serde_json = "1.0"
fnv = "1.0.3"
bitflags = "2.6.0"

loomz-shared = { path = "../loomz-shared" }
