[package]
name = "loomz-shared"
version = "0.1.0"
edition = "2021"

[features]
default = ["reload-assets"]

# Watch for assets change on disk and notice the engine when they do
reload-assets = ["notify"]

[dependencies]
fnv = "1.0.3"
parking_lot = "0.12.3"
bitflags = "2.6.0"
png = "0.17.14"
notify = { version = "7.0.0", optional = true }

vk = { path = "../vk" }
