[package]
name = "loomz"
version = "0.1.0"
edition = "2021"

[features]
default = ["multithreading"]
hot-reload = ["libloading", "notify", "loomz-client/hot-reload"]
multithreading = ["parking_lot"]

[dependencies]
winit = "0.30.5"
raw-window-handle = { version = "0.6" }
libloading = { version = "0.8.5", optional = true }
notify = { version = "7.0.0", optional = true }
parking_lot = { version = "0.12.3", optional = true }

loomz-shared = { path = "../loomz-shared" }
loomz-client = { path = "../loomz-client" }
loomz-engine = { path = "../loomz-engine" }
