[package]
name = "loomz"
version = "0.1.0"
edition = "2021"

[features]
default = []

# Allow hot reloading for the game logic code
hot-reload = ["libloading", "notify", "loomz-client/hot-reload"]

# Watch for assets change on disk and notice the engine when they change
reload-assets = ["loomz-shared/reload-assets"]

# Runs the windowing, the game logic, and the rendering on different threads
multithreading = ["parking_lot"]

[dependencies]
winit = "0.30.5"
raw-window-handle = "0.6"
mimalloc = "0.1.43"
libloading = { version = "0.8.5", optional = true }
notify = { version = "7.0.0", optional = true }
parking_lot = { version = "0.12.3", optional = true }

loomz-shared = { path = "../loomz-shared" }
loomz-client = { path = "../loomz-client" }
loomz-engine = { path = "../loomz-engine" }
